--- a/uni.html
+++ b/uni.html
@@ -183,6 +183,12 @@
         </div>
     </div>
 
+        <div class="container-fluid p-2 my-5 bg-dark text-white">
+        <div class="container text-center">
+            <p>©2025 University Dashboard. All Rights Reserved.</p>
+        </div>
+    </div>
+
 
 
 
